# job-board-starter

./: .env.example  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
migrations/: 001_create_tables.sql
scripts/: seed.py
src/job_board/: db.py  queue.py  worker.py
tests/: test_db.py  test_step1_databases.py  test_step2_sql.py  test_step3_doc_kv.py  test_step3_locking.py  test_step4_queue.py  test_step4_vectors.py  test_step4_write_through.py  test_step5_files.py  test_step5_vectors.py  test_step6_quality.py
