[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-board"
version = "0.1.0"
description = "A job board application"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary",
    "redis",
    "pydantic",
    "pandas",
    "pyarrow",
    "duckdb",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/job_board"]

[tool.pytest.ini_options]
testpaths = ["tests"]
